--- a/.env
+++ b/.env
@@ -6,8 +6,16 @@ PORT=3000
 # Database
 # ========
 
+# DATABASE_NAME="qchat"
+# DATABASE_PORT=5432
+# DATABASE_HOST="localhost"
+# DATABASE_USERNAME="postgres"
+# DATABASE_PASSWORD="password123"
+# DATABASE_SOCKET="/cloudsql/mftl-platform:us-central1:mftl-data"
+
 DATABASE_NAME="qchat"
 DATABASE_PORT=5432
-DATABASE_HOST="localhost"
-DATABASE_USERNAME="postgres"
-DATABASE_PASSWORD="password123"
+DATABASE_HOST="34.121.255.48"
+DATABASE_USERNAME="qchat-api"
+DATABASE_PASSWORD=")R-A68@?3S$r[ynN"
+DATABASE_SOCKET="/cloudsql/mftl-platform:us-central1:mftl-data"
