--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^8.0.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "mftl-webhook": "^0.0.6",
     "nestjs-typeorm-paginate": "^2.6.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
